C++/UltraStik.h

enum MapName
{
	vjoy2way,		// 2-Way, Vertical
	joy2way,		// 2-Way, Horizontal
	joy4way,		// 4-Way
	udbjoy4way,		// 4-Way, No Sticky (UD Bias)
	djoy4way,		// 4-Way, Diagonals Only
	rdjoy4way,		// 4-Way, Rotated Diagonals
	joy8way,		// 8-Way
	easyjoy8way,	// 8-Way, Easy Diagonals
	analog,			// Analog
	mouse			// Mouse Pointer
};
typedef VOID (__stdcall *USBDEVICE_ATTACHED_CALLBACK)(INT id);
typedef VOID (__stdcall *USBDEVICE_REMOVED_CALLBACK)(INT id);
ULTRASTIK_API VOID __stdcall UltraStik_SetCallbacks(USBDEVICE_ATTACHED_CALLBACK usbDeviceAttachedCallback, USBDEVICE_REMOVED_CALLBACK usbDeviceRemovedCallback);
ULTRASTIK_API INT __stdcall UltraStik_Initialize();
ULTRASTIK_API VOID __stdcall UltraStik_Shutdown();
ULTRASTIK_API INT __stdcall UltraStik_GetVendorId(INT id);
ULTRASTIK_API INT __stdcall UltraStik_GetProductId(INT id);
ULTRASTIK_API INT __stdcall UltraStik_GetVersionNumber(INT id);
ULTRASTIK_API VOID __stdcall UltraStik_GetVendorName(INT id, PWCHAR sVendorName);
ULTRASTIK_API VOID __stdcall UltraStik_GetProductName(INT id, PWCHAR sProductName);
ULTRASTIK_API VOID __stdcall UltraStik_GetSerialNumber(INT id, PWCHAR sSerialNumber);
ULTRASTIK_API VOID __stdcall UltraStik_GetDevicePath(INT id, PWCHAR sDevicePath);
ULTRASTIK_API VOID __stdcall UltraStik_SetRestrictor(INT id, BOOL value);
ULTRASTIK_API VOID __stdcall UltraStik_SetFlash(INT id, BOOL value);
ULTRASTIK_API INT __stdcall UltraStik_GetUltraStikId(INT id);
ULTRASTIK_API VOID __stdcall UltraStik_SetUltraStikId(INT id, INT value);
ULTRASTIK_API INT __stdcall UltraStik_LoadMap(INT id, PCHAR map);
//ULTRASTIK_API INT __stdcall UltraStik_LoadMap(INT id, MapName map);
ULTRASTIK_API INT __stdcall UltraStik_LoadMapFile(INT id, PCHAR fileName);
ULTRASTIK_API INT __stdcall UltraStik_LoadConfigFile(PCHAR mapPath, PCHAR fileName);